--- a/sass/shop/layout/maincon.scss
+++ b/sass/shop/layout/maincon.scss
@@ -15,5 +15,16 @@
         grid-template-columns: 26.5% 73.4%;
         width: 100%;
         height: 100%;
+        @media only screen and (max-width:1100px) {
+            &{
+                grid-template-columns: 32.5% 67.5%;
+            }
+        }
+        @media only screen and (max-width:900px) {
+            &{
+                grid-template-columns: 100% 0%;
+                
+            }
+        }
     }
 }
