--- a/sass/group/layout/sidebar__markket/sidebar__marketplace.scss
+++ b/sass/group/layout/sidebar__markket/sidebar__marketplace.scss
@@ -140,14 +140,39 @@
         &--group-part {
             width: 100%;
             height: 35rem;
-            border: 3px solid green;
+
 
             &--heading {
                 margin-left: 1.5rem;
-                margin-top: 1rem;
+                margin-top: 2rem;
                 font-size: 1.7rem;
                 font-weight: 600;
                 color: #e4e6eb;
+            }
+
+            &--grid {
+                width: 100%;
+                height: 86%;
+                margin-top: 0.5rem;
+                border: 2px solid violet;
+                display: grid;
+                grid-template-columns: 100%;
+                grid-template-rows: repeat(4, 25%);
+
+                &--box {
+                    border: 2px solid red;
+                    display: grid;
+                    grid-template-rows: 100%;
+                    grid-template-columns: 25% 75%;
+
+                    &--img {
+                        border: 2px solid blue;
+                    }
+
+                    &--txt {
+                        border: 4px solid green;
+                    }
+                }
             }
         }
     }
