--- a/sass/group/layout/sidebar__markket/sidebar__marketplace.scss
+++ b/sass/group/layout/sidebar__markket/sidebar__marketplace.scss
@@ -166,7 +166,26 @@
                     grid-template-columns: 25% 75%;
 
                     &--img {
-                        border: 2px solid blue;
+                        width: 100%;
+                        height: 100%;
+                        display: grid;
+                        align-items: center;
+                        justify-items: center;
+                        align-content: center;
+                        justify-items: center;
+
+                        &--img {
+                            width: 6rem;
+                            height: 6rem;
+
+                            &--img {
+                            border-radius:0.6rem;
+
+                                width: 100%;
+                                height: 100%;
+                                object-fit: cover;
+                            }
+                        }
                     }
 
                     &--txt {
