--- a/sass/main-group.scss
+++ b/sass/main-group.scss
@@ -5,5 +5,5 @@
 @import"./group/layout/sidebar__markket/filters.scss";
 @import"./group/layout/sidebar__markket/listening__sidebar.scss";
 @import"./group/layout/sidebar__markket/sidebar__marketplace.scss";
-
+@import"./group/layout/post/post.scss";
 
