--- a/css/group.css
+++ b/css/group.css
@@ -444,17 +444,32 @@ body {
         color: #e4e6eb; }
       .main-con--grid--sidebar--main-part--group-part--grid {
         width: 100%;
-        height: 86%;
+        height: 100%;
+        padding-top: 1rem;
+        padding-left: 0.6rem;
         margin-top: 0.5rem;
-        border: 2px solid violet;
         display: grid;
         grid-template-columns: 100%;
-        grid-template-rows: repeat(4, 25%); }
+        grid-template-rows: repeat(4, 25%);
+        transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+        -webkit-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+        -moz-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+        -ms-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+        -o-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1); }
         .main-con--grid--sidebar--main-part--group-part--grid--box {
-          border: 2px solid red;
+          border-radius: 1rem;
+          width: 98%;
           display: grid;
           grid-template-rows: 100%;
           grid-template-columns: 25% 75%; }
+          .main-con--grid--sidebar--main-part--group-part--grid--box:hover {
+            cursor: pointer;
+            background-color: rgba(255, 255, 255, 0.1);
+            transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+            -webkit-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+            -moz-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+            -ms-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+            -o-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1); }
           .main-con--grid--sidebar--main-part--group-part--grid--box--img {
             width: 100%;
             height: 100%;
@@ -472,4 +487,201 @@ body {
                 height: 100%;
                 object-fit: cover; }
           .main-con--grid--sidebar--main-part--group-part--grid--box--txt {
-            border: 4px solid green; }
+            display: grid;
+            grid-template-columns: 100%;
+            grid-template-rows: repeat(2, 50%); }
+            .main-con--grid--sidebar--main-part--group-part--grid--box--txt--head {
+              color: #e4e6eb;
+              font-size: 1.5rem;
+              font-weight: 600;
+              padding-top: 2.2rem; }
+            .main-con--grid--sidebar--main-part--group-part--grid--box--txt--subhead {
+              font-size: 1.3rem;
+              font-weight: 400;
+              color: #b0b3b8; }
+
+.maincon--grid--post {
+  border: 2px solid red; }
+  .maincon--grid--post--grid {
+    padding-top: 3rem;
+    display: grid;
+    width: 100%;
+    height: 100%;
+    border: 2px solid goldenrod;
+    overflow: scroll;
+    grid-template-columns: 100%;
+    grid-template-rows: repeat(5, 63.5rem); }
+    .maincon--grid--post--grid {
+      scrollbar-width: auto;
+      scrollbar-color: transparent transparent; }
+    .maincon--grid--post--grid::-webkit-scrollbar {
+      width: 0px; }
+    .maincon--grid--post--grid::-webkit-scrollbar-track {
+      background: transparent; }
+    .maincon--grid--post--grid::-webkit-scrollbar-thumb {
+      background-color: grey;
+      border-radius: 0px;
+      border: 0px solid transparent;
+      -webkit-border-radius: 10px;
+      -moz-border-radius: 10px;
+      -ms-border-radius: 10px;
+      -o-border-radius: 10px; }
+    .maincon--grid--post--grid--box {
+      background-color: #242526;
+      border-radius: 10px;
+      -webkit-border-radius: 10px;
+      -moz-border-radius: 10px;
+      -ms-border-radius: 10px;
+      -o-border-radius: 10px;
+      margin-top: 3rem;
+      display: grid;
+      grid-template-columns: 100%;
+      grid-template-rows: 10% 78% 12%; }
+      .maincon--grid--post--grid--box--box {
+        border: 2px solid red; }
+        .maincon--grid--post--grid--box--box--header {
+          width: 100%;
+          height: 100%;
+          display: grid;
+          grid-template-rows: 100%;
+          grid-template-columns: 100%; }
+          .maincon--grid--post--grid--box--box--header--img-con {
+            display: flex;
+            align-items: center;
+            justify-items: center;
+            align-content: center; }
+            .maincon--grid--post--grid--box--box--header--img-con--img {
+              margin-left: 1.5rem;
+              border: 2px solid #2e89ff;
+              width: 4rem;
+              height: 4rem;
+              border-radius: 50%;
+              -webkit-border-radius: 50%;
+              -moz-border-radius: 50%;
+              -ms-border-radius: 50%;
+              -o-border-radius: 50%; }
+              .maincon--grid--post--grid--box--box--header--img-con--img--name-con {
+                display: flex;
+                align-items: center;
+                justify-items: center;
+                align-content: center; }
+                .maincon--grid--post--grid--box--box--header--img-con--img--name-con--name {
+                  color: #E4E6EB;
+                  font-size: 1.4rem;
+                  font-family: 'Roboto', sans-serif;
+                  font-weight: 600;
+                  margin-left: 1rem;
+                  margin-top: -2rem; }
+                .maincon--grid--post--grid--box--box--header--img-con--img--name-con--time {
+                  text-decoration: none;
+                  color: #B0B3B8;
+                  font-size: 1.2rem;
+                  font-family: 'Roboto', sans-serif;
+                  font-weight: 400;
+                  margin-top: 1.5rem;
+                  margin-left: -4.7rem;
+                  transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1);
+                  -webkit-transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1);
+                  -moz-transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1);
+                  -ms-transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1);
+                  -o-transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1); }
+                  .maincon--grid--post--grid--box--box--header--img-con--img--name-con--time:hover {
+                    cursor: pointer;
+                    transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1);
+                    -webkit-transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1);
+                    -moz-transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1);
+                    -ms-transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1);
+                    -o-transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1);
+                    text-decoration: underline; }
+      .maincon--grid--post--grid--box--main {
+        width: 100%;
+        height: 100%; }
+        .maincon--grid--post--grid--box--main--img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover; }
+      .maincon--grid--post--grid--box--reaction {
+        width: 100%;
+        height: 100%;
+        display: grid;
+        grid-template-columns: 100%;
+        grid-template-rows: repeat(2, 50%); }
+        .maincon--grid--post--grid--box--reaction--reacted-con {
+          width: 100%;
+          height: 100%;
+          display: flex; }
+          .maincon--grid--post--grid--box--reaction--reacted-con--reacted--icon {
+            margin-left: 1.8rem;
+            margin-top: 1rem; }
+            .maincon--grid--post--grid--box--reaction--reacted-con--reacted--icon--count {
+              color: #B0B3B8;
+              font-size: 1.3rem;
+              font-family: 'Roboto', sans-serif;
+              margin-left: 0.5rem;
+              margin-top: 1rem; }
+          .maincon--grid--post--grid--box--reaction--reacted-con--share {
+            color: #B0B3B8;
+            font-size: 1.2rem;
+            font-family: 'Roboto', sans-serif;
+            margin-left: 28rem;
+            margin-top: 1rem; }
+      .maincon--grid--post--grid--box--divider {
+        background-color: rgba(128, 128, 128, 0.4);
+        height: 0.1rem;
+        width: 295%;
+        z-index: 1000;
+        margin-top: -4.2rem;
+        margin-left: 0.7rem;
+        position: relative; }
+      .maincon--grid--post--grid--box--reaction-con {
+        width: 93%;
+        height: 100%;
+        margin-left: 1.5rem;
+        display: grid;
+        grid-template-rows: 100%;
+        grid-template-columns: repeat(3, 33.3%); }
+        .maincon--grid--post--grid--box--reaction-con--box {
+          text-align: center;
+          height: 93%;
+          border-radius: 0.8rem;
+          display: flex;
+          align-items: center;
+          justify-items: center;
+          align-content: center;
+          justify-content: center;
+          transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+          -webkit-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+          -moz-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+          -ms-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+          -o-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+          -webkit-border-radius: 0.8rem;
+          -moz-border-radius: 0.8rem;
+          -ms-border-radius: 0.8rem;
+          -o-border-radius: 0.8rem;
+          transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
+          -webkit-transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
+          -moz-transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
+          -ms-transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
+          -o-transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1); }
+          .maincon--grid--post--grid--box--reaction-con--box:hover {
+            cursor: pointer;
+            transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
+            -webkit-transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
+            -moz-transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
+            -ms-transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
+            -o-transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
+            background-color: rgba(77, 79, 80, 0.7); }
+          .maincon--grid--post--grid--box--reaction-con--box--icon {
+            -webkit-filter: invert(62%) sepia(98%) saturate(12%) hue-rotate(175deg) brightness(90%) contrast(96%);
+            width: 1.8rem;
+            height: 1.8rem;
+            fill: transparent;
+            stroke-width: 3px;
+            stroke: #B0B3B8; }
+            .maincon--grid--post--grid--box--reaction-con--box--icon--name {
+              font-size: 1.4rem;
+              color: #B0B3B8;
+              font-family: 'Roboto', sans-serif;
+              font-weight: bold;
+              margin-left: 0.5rem;
+              margin-top: 0.4rem; }
