--- a/css/group.css
+++ b/css/group.css
@@ -595,7 +595,8 @@ body {
                     text-decoration: underline; }
       .maincon--grid--post--grid--box--main {
         width: 100%;
-        height: 100%; }
+        height: 100%;
+        margin-top: -5rem; }
         .maincon--grid--post--grid--box--main--img {
           width: 100%;
           height: 100%;
