--- a/sass/group/layout/post/post.scss
+++ b/sass/group/layout/post/post.scss
@@ -112,6 +112,7 @@
             &--main {
                 width: 100%;
                 height: 100%;
+                margin-top: -5rem;
                 &--img {
                     width: 100%;
                     height: 100%;
