--- a/sass/main-group.scss
+++ b/sass/main-group.scss
@@ -6,4 +6,4 @@
 @import"./group/layout/sidebar__markket/listening__sidebar.scss";
 @import"./group/layout/sidebar__markket/sidebar__marketplace.scss";
 @import"./group/layout/post/post.scss";
-
+@import"./group/layout/ads/ads.scss";
