--- a/sass/group/layout/post/post.scss
+++ b/sass/group/layout/post/post.scss
@@ -1,12 +1,10 @@
 .maincon--grid--post {
-    border: 2px solid red;
-
+margin-left: 2rem;
     &--grid {
-        padding-top: 3rem;
+        padding-top: 0.5rem;
         display: grid;
         width: 100%;
         height: 100%;
-        border: 2px solid goldenrod;
         overflow: scroll;
         grid-template-columns: 100%;
         grid-template-rows: repeat(5, 63.5rem);
@@ -46,7 +44,6 @@
             grid-template-columns: 100%;
             grid-template-rows: 10% 78% 12%;
             &--box {
-                border: 2px solid red;
                 &--header {
                     width: 100%;
                     height: 100%;
