--- a/sass/group/layout/ads/ads.scss
+++ b/sass/group/layout/ads/ads.scss
@@ -4,7 +4,7 @@
     display: grid;
 
     &--grid {
-        width: 100%;
+        width: 92%;
         height: 100%;
         display: grid;
         grid-template-columns: 100%;
@@ -12,10 +12,12 @@
 
         &--box {}
 
+
         &--ads-box {
             width: 100%;
             height: 100%;
-            border: 2px solid yellow;
+            background-color: #242526;
+            border-radius: 1rem;
             margin-left: 2rem;
             width: 92%;
             display: grid;
@@ -27,15 +29,27 @@
             }
 
             &--txt {
+                border:2px solid red;
                 width: 100%;
                 height: 100%;
                 display: grid;
                 grid-template-columns: 100%;
                 grid-template-rows: 5% 45% 50%;
-                border: 2px solid blue;
+
 
                 &--box {
-                    border: 2px solid blue;
+                }
+
+                &--subhead {
+                    align-content: center;
+                    color: #b0b3b8;
+                    font-size: 1.5rem;
+                    font-weight: 400;
+                    margin-left: 2rem;
+                    margin-top: -0.6rem;
+                    display: grid;
+                    grid-template-rows: 100%;
+                    grid-template-columns: 100%;
                 }
 
                 &--head {
@@ -44,17 +58,23 @@
                     grid-template-columns: 65% 35%;
 
                     &--txt {
+
                         display: grid;
-                        align-items: center;
+                        /* align-items: center; */
                         align-content: center;
-                        justify-items: center;
-                        justify-content: center;
-                        border: 2px solid yellow;
+                        /* justify-items: center; */
+                        /* justify-content: center; */
                         color: #e4e6eb;
                         font-size: 1.7rem;
                         font-weight: 600;
+                        margin-left: 2rem;
+
                     }
-                    &--more{
+
+                    &--more {
+                        height: 96%;
+                        margin-top: 0.1rem;
+                        border-radius: 0.2rem;
                         display: grid;
                         align-items: center;
                         align-content: center;
@@ -63,6 +83,22 @@
                         color: #4599ff;
                         font-size: 1.5rem;
                         font-weight: 400;
+                        margin-left: 4rem;
+                        transition: all .7s cubic-bezier(0.075, 0.82, 0.165, 1);
+                        -webkit-transition: all .7s cubic-bezier(0.075, 0.82, 0.165, 1);
+                        -moz-transition: all .7s cubic-bezier(0.075, 0.82, 0.165, 1);
+                        -ms-transition: all .7s cubic-bezier(0.075, 0.82, 0.165, 1);
+                        -o-transition: all .7s cubic-bezier(0.075, 0.82, 0.165, 1);
+
+                        &:hover {
+                            cursor: pointer;
+                            background-color: rgba(77, 79, 80, 0.5);
+                            transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+                            -webkit-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+                            -moz-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+                            -ms-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+                            -o-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+                        }
                     }
                 }
             }
