--- a/sass/group/layout/ads/ads.scss
+++ b/sass/group/layout/ads/ads.scss
@@ -2,13 +2,17 @@
     width: 100%;
     height: 100%;
     display: grid;
-
+    @media only screen and (max-width:1099px) {
+        & {
+            display: none;
+        }
+    }
     &--grid {
         width: 92%;
         height: 100%;
         display: grid;
         grid-template-columns: 100%;
-        grid-template-rows: 2.5% 68.5% 29%;
+        grid-template-rows: 2.5% 71.5% 26%;
 
         &--box {}
 
@@ -22,14 +26,15 @@
             width: 92%;
             display: grid;
             grid-template-columns: 100%;
-            grid-template-rows: 19% 74% 7%;
+            grid-template-rows: 15% 7% 78%;
 
             &--box {
-                border: 2px solid red;
+                border: 2PX solid RED;
             }
 
             &--txt {
-                border:2px solid red;
+                margin-top: 1rem;
+                margin-left: 0.5rem;
                 width: 100%;
                 height: 100%;
                 display: grid;
@@ -37,16 +42,17 @@
                 grid-template-rows: 5% 45% 50%;
 
 
-                &--box {
-                }
+
+                &--box {}
 
                 &--subhead {
                     align-content: center;
                     color: #b0b3b8;
                     font-size: 1.5rem;
                     font-weight: 400;
-                    margin-left: 2rem;
-                    margin-top: -0.6rem;
+                    margin-left: 1rem;
+
+                    margin-top: -0rem;
                     display: grid;
                     grid-template-rows: 100%;
                     grid-template-columns: 100%;
@@ -67,15 +73,21 @@
                         color: #e4e6eb;
                         font-size: 1.7rem;
                         font-weight: 600;
-                        margin-left: 2rem;
+                        margin-left: 1rem;
 
+                        @media only screen and (max-width:1300px) {
+                            & {
+                                grid-row: 1 / 3;
+                            }
+                        }
                     }
 
                     &--more {
                         height: 96%;
-                        margin-top: 0.1rem;
+                        margin-top: 0.5rem;
                         border-radius: 0.2rem;
                         display: grid;
+                        margin-right: 2rem;
                         align-items: center;
                         align-content: center;
                         justify-items: center;
@@ -90,6 +102,12 @@
                         -ms-transition: all .7s cubic-bezier(0.075, 0.82, 0.165, 1);
                         -o-transition: all .7s cubic-bezier(0.075, 0.82, 0.165, 1);
 
+                        @media only screen and (max-width:1200px) {
+                            & {
+                                display: none;
+                            }
+                        }
+
                         &:hover {
                             cursor: pointer;
                             background-color: rgba(77, 79, 80, 0.5);
@@ -98,7 +116,93 @@
                             -moz-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
                             -ms-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
                             -o-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+
                         }
+                    }
+                }
+            }
+
+            &--img {
+                display: flex;
+                align-items: center;
+                justify-items: center;
+                align-content: center;
+                justify-content: center;
+                width: 100%;
+                height: 100%;
+
+
+                &--border {
+                    border-radius: 0.8rem;
+                    border: 1px solid rgba(128, 128, 128, 0.4);
+                    width: 30.8rem;
+                    height: 30.8rem;
+                    overflow: hidden;
+
+                    @media only screen and (max-width:1200px) {
+                        & {
+                            width: 28rem;
+                            height: 28rem;
+                        }
+                    }
+
+                    &--img {
+                        width: 100%;
+                        height: 100%;
+                        object-fit: cover;
+                    }
+                }
+            }
+
+            &--name {
+                display: grid;
+                grid-template-rows: 100%;
+                grid-template-columns: 60% 40%;
+                align-content: center;
+                justify-content: center;
+                align-items: center;
+                justify-items: center;
+                margin-left: 2rem;
+                margin-top: 1.5rem;
+
+                @media only screen and (max-width:1300px) {
+                    & {
+                        margin-top: -0.1rem;
+                    }
+                }
+
+                @media only screen and (max-width:1300px) {
+                    & {
+                        margin-top: 2rem;
+                    }
+                }
+
+                &--name {
+                    color: #e4e6eb;
+                    font-size: 1.7rem;
+                    font-weight: 600;
+
+                    @media only screen and (max-width:1300px) {
+                        & {
+                            font-size: 1.6rem;
+                        }
+                    }
+
+                    @media only screen and (max-width:1180px) {
+                        & {
+                            font-size: 1.5rem;
+                        }
+                    }
+
+                    &--join {
+                        color: #e4e6eb;
+                        font-size: 1.5rem;
+                        font-weight: 600;
+                        background-color: #2374e1;
+                        border-radius: 0.5rem;
+                        padding: 0.6rem;
+                        padding-left: 1.5rem;
+                        padding-right: 1.5rem;
                     }
                 }
             }
