--- a/sass/group/layout/maincon.scss
+++ b/sass/group/layout/maincon.scss
@@ -2,15 +2,23 @@
     width: 100vw;
     height: 91.5vh;
     overflow-y: hidden;
+
     &--grid {
         display: grid;
         grid-template-rows: 100%;
         grid-template-columns: 26.5% 42% 31.5%;
         width: 100%;
         height: 100%;
-        &--box{
+
+        @media only screen and (max-width:1099px) {
+            & {
+                grid-template-columns: 32.5% 58% 8.5%;
+            }
+        }
+
+        &--box {
             border: 2px solid red;
         }
-    
+
     }
 }
