--- a/sass/group/layout/post/post.scss
+++ b/sass/group/layout/post/post.scss
@@ -1,5 +1,10 @@
 .maincon--grid--post {
 margin-left: 2rem;
+@media only screen and (max-width:1099px) {
+    & {
+        margin-left: 10rem;
+    }
+}
     &--grid {
         padding-top: 0.5rem;
         display: grid;
