--- a/sass/group/layout/sidebar__markket/sidebar__marketplace.scss
+++ b/sass/group/layout/sidebar__markket/sidebar__marketplace.scss
@@ -94,6 +94,11 @@
                     height: 3.6rem;
                     fill: #b0b3b8;
                     margin-left: 1.7rem;
+                    @media only screen and (max-width:1300px) {
+                        & {
+                            margin-left: 1.4rem;
+                        }
+                    }
                 }
             }
         }
